# tiny-interp

./: .gitignore  CMakeLists.txt  README.md  main.c
inc/: tinterp.h
src/: tinterp.c
tests/: test_tinterp.c
